# DBMS_MINI_PROJECT

./: Loan_System_Complete_Setup.sql  PostgreSQL_Views_Procedures.md
backend/: .gitignore  alembic.ini  populate_db.py  pyproject.toml  requirements.txt
backend/app/: auth.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  borrowers.py  loans.py  repayments.py  reports.py  users.py
backend/db-migrations/: env.py  project_doc.md
backend/db-migrations/versions/: a2e0eb41b9a8_add_auditlog_model.py  d92ae0daa5bd_db_creat.py  e44cebee40f6_db_creat11.py  f94616a4c60f_db_creat111.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx  styles.css
frontend/src/components/: Layout.jsx  Nav.jsx  Sidebar.jsx
frontend/src/pages/: Borrowers.jsx  Dashboard.jsx  LoanDetails.jsx  Loans.jsx  Login.jsx  Repayments.jsx  Signup.jsx
